# lenovo-rust

./: .gitignore  Cargo.toml  README.md  RUBRIC.md  rust-toolchain.toml
.github/workflows/: ai-review.yml  ci.yml
frb_demo/: README.md  pubspec.yaml
frb_demo/android/app/: build.gradle.kts
frb_demo/android/app/src/main/: AndroidManifest.xml
frb_demo/android/app/src/main/kotlin/com/lenovo/frb_demo/: MainActivity.kt
frb_demo/ios/Runner/: Info.plist
frb_demo/ios/Runner.xcodeproj/: project.pbxproj
frb_demo/lib/: main.dart
frb_demo/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
frb_demo/lib/src/rust/api/: simple.dart
frb_demo/linux/: CMakeLists.txt
frb_demo/linux/runner/: my_application.cc
frb_demo/macos/Runner.xcodeproj/: project.pbxproj
frb_demo/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frb_demo/macos/Runner/Configs/: AppInfo.xcconfig
frb_demo/rust/: Cargo.toml
frb_demo/rust/src/: frb_generated.rs
frb_demo/rust/src/api/: simple.rs
frb_demo/test/: rust_call_test.dart
frb_demo/web/: index.html  manifest.json
frb_demo/windows/runner/: Runner.rc
homework/: README.md  ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  ch11.md  ch12.md  ch13.md  ch14.md  ch15.md  ch5x.md
projects/v2-async/: Cargo.toml
projects/v2-async/src/: lib.rs  main.rs
projects/v2-capstone/: Cargo.toml
projects/v2-capstone/src/: ffi.rs  lib.rs  main.rs  platform.rs
projects/v2-concurrency/: Cargo.toml
projects/v2-concurrency/src/: lib.rs
projects/v2-cross-core/: Cargo.toml
projects/v2-cross-core/src/: lib.rs
projects/v2-cross-lang/: Cargo.toml
projects/v2-cross-lang/src/: domain.rs  lib.rs
projects/v2-debugging/: Cargo.toml
projects/v2-debugging/src/: lib.rs  main.rs
projects/v2-ffi-cpp/: Cargo.toml  build.rs
projects/v2-ffi-cpp/csrc/: mathlib.c  mathlib.h
projects/v2-ffi-cpp/src/: lib.rs
projects/v2-idiomatic/: Cargo.toml  events.jsonl
projects/v2-idiomatic/src/: lib.rs  main.rs
projects/v2-mobile/: Cargo.toml
projects/v2-mobile/src/: lib.rs
projects/v2-ownership-errors/: Cargo.toml
projects/v2-ownership-errors/src/: lib.rs
projects/v2-perf-bench/: Cargo.toml
projects/v2-perf-bench/benches/: sum_squares.rs  word_count.rs
projects/v2-perf-bench/src/: lib.rs
projects/v2-safe-abstraction/: Cargo.toml
projects/v2-safe-abstraction/src/: lib.rs
projects/v2-type-modeling/: Cargo.toml
projects/v2-type-modeling/src/: lib.rs
projects/v2-win-api/: Cargo.toml
projects/v2-win-api/src/: lib.rs  main.rs
projects/v2-win-com/: Cargo.toml
projects/v2-win-com/src/: lib.rs
projects/v2-win-gui/: Cargo.toml
projects/v2-win-gui/src/: gui.rs  integration.rs  lib.rs  main.rs  service.rs
projects/v2-win-packaging/: Cargo.toml
projects/v2-win-packaging/ci/: ci.yml
projects/v2-win-packaging/src/: lib.rs  main.rs
projects/v2-win-packaging/wix/: main.wxs
stages/L1-memory/: Cargo.toml
stages/L1-memory/src/: lib.rs  main.rs
stages/L10-ffi/: Cargo.toml  build.rs
stages/L10-ffi/csrc/: checksum.c
stages/L10-ffi/src/: lib.rs
stages/L11-win32/: Cargo.toml
stages/L11-win32/src/: lib.rs
stages/L12-service/: Cargo.toml
stages/L12-service/src/: lib.rs
stages/L13-package/: Cargo.toml
stages/L13-package/src/: lib.rs
stages/L14-arch/: Cargo.toml
stages/L14-arch/src/: lib.rs
stages/L15-capstone/: Cargo.toml
stages/L15-capstone/src/: lib.rs  main.rs
stages/L2-ownership/: Cargo.toml
stages/L2-ownership/src/: lib.rs
stages/L3-borrow/: Cargo.toml
stages/L3-borrow/src/: lib.rs
stages/L4-model/: Cargo.toml
stages/L4-model/src/: lib.rs
stages/L5-report/: Cargo.toml
stages/L5-report/src/: lib.rs
stages/L5X-listlab/: Cargo.toml
stages/L5X-listlab/src/: lib.rs
stages/L6-collect/: Cargo.toml
stages/L6-collect/src/: lib.rs
stages/L7-async/: Cargo.toml
stages/L7-async/src/: lib.rs
stages/L8-robust/: Cargo.toml
stages/L8-robust/src/: lib.rs
stages/L8-robust/tests/: pipeline.rs
stages/L9-unsafe/: Cargo.toml
stages/L9-unsafe/src/: lib.rs
