# WinMon —— V3 贯穿项目（Windows 进程/事件监控器）
# 独立 workspace，与 v2 工程解耦。每课一个 stage。
[workspace]
resolver = "2"
members = [
    "stages/L1-memory",
    "stages/L2-ownership",
    "stages/L3-borrow",
    "stages/L4-model",
    "stages/L5-report",
    "stages/L6-collect",
    "stages/L7-async",
    "stages/L8-robust",
    "stages/L9-unsafe",
    "stages/L10-ffi",
    "stages/L11-win32",
    "stages/L12-service",
    "stages/L13-package",
    "stages/L14-arch",
    "stages/L15-capstone",
    "stages/L5X-listlab",
]
