[package]
name = "v2-async"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 4 课：异步编程与 Tokio（行协议 TCP 服务 + mpsc/select! 流水线）"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "lineserver"
path = "src/main.rs"
