[package]
name = "v2-capstone"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 15 课综合实战：平台无关核心 + FFI 边界 + #[cfg(windows)] 适配层（系统信息收集器）"

[lib]
name = "v2_capstone"
path = "src/lib.rs"

[[bin]]
name = "sysreport"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# Windows 专项依赖只在 Windows 目标参与编译：macOS / Linux 桌面构建时整个
# windows crate 都不会被拉取，平台无关核心 + FFI + 回退探针照常 build/test。
# 客户在 Windows 机器上 `cargo run -p v2-capstone` 即走真实 Win32 路径。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
] }
