[package]
name = "v2-cross-lang"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 8 课：用 diplomat 一次定义 Rust API、生成多语言 FFI 绑定（macOS 桌面可编译；绑定生成由 diplomat-tool 在另一步完成）"

[lib]
# diplomat 生成的多语言绑定最终需要一个 C ABI 动态/静态库（cdylib/staticlib）。
# 同时保留 rlib，使本 crate 仍可被工作区内其它 Rust crate 作为普通库依赖、并能跑 `cargo test`。
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
diplomat = "0.15"
diplomat-runtime = "0.15"
