[package]
name = "v2-debugging"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 14 课：可调试演练工程（tracing 接入 + 典型缺陷函数与修正版）"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# 仅 #[tokio::test] 用到，属测试期依赖。
tokio.workspace = true
