[package]
name = "v2-idiomatic"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 1 课：把通用代码重构为 idiomatic Rust（所有权驱动的 API 设计）"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true

[[bin]]
name = "events"
path = "src/main.rs"
