[package]
name = "v2-mobile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 8 课移动端补充：用 UniFFI 把平台无关核心导出到 Kotlin/Android（复用自 main 分支，Rust↔Kotlin）"

# rlib 供桌面 cargo test；cdylib 供 Kotlin/Android 经 JNA 加载 .so/.dylib。
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
thiserror.workspace = true
