[package]
name = "v2-perf-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 5 课：性能优化与基准测试（同一功能的朴素版 vs 优化版 + criterion benches）"

[dependencies]
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true

# criterion 0.5 需要自带 harness：关掉默认 libtest harness，
# 用 bench 文件里的 criterion_group!/criterion_main! 接管入口。
[[bench]]
name = "word_count"
harness = false

[[bench]]
name = "sum_squares"
harness = false
