[package]
name = "v2-win-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 9 课：用 Rust 调用 Windows API（平台无关核心 + #[cfg(windows)] 适配层）"

[lib]
name = "v2_win_api"
path = "src/lib.rs"

[[bin]]
name = "proclist"
path = "src/main.rs"

[dependencies]

# Windows 专项依赖只在 Windows 目标参与编译：macOS / Linux 桌面构建时
# 整个 windows crate 都不会被拉取与编译，平台无关核心照常 build/test。
# 客户在 Windows 机器上 `cargo run -p v2-win-api` 即可走真实 Win32 路径。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }
