[package]
name = "v2-win-com"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 10 课：COM / WinRT 深入（平台无关核心 + #[cfg(windows)] COM 适配层）"

[lib]
name = "v2_win_com"
path = "src/lib.rs"

# Windows 专项依赖只在 Windows 目标参与编译：macOS / Linux 桌面构建时
# 整个 windows crate 都不会被拉取与编译，平台无关核心照常 build/test。
# 客户在 Windows 机器上 `cargo test -p v2-win-com` 即可走真实 COM / WinRT 路径。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "implement",                  # #[implement] 宏：把 Rust 类型导出为 COM 对象
    "Win32_System_Com",           # CoInitializeEx / CoCreateInstance / IUnknown / IPersist / HRESULT
    "Win32_UI_Shell",             # IShellLinkW / ShellLink CLSID（演示消费 Shell COM 接口）
] }
# #[implement] 宏展开出的代码按 crate 名引用 `windows_core`，需把它作为直接依赖引入
# （windows 0.58 的已知约定），否则 Windows 目标报 E0433 找不到 windows_core。
windows-core = "0.58"
