[package]
name = "v2-win-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 12 课：Windows 桌面 GUI 与系统集成（平台无关核心 + #[cfg(windows)] 适配层）"

[lib]
name = "v2_win_gui"
path = "src/lib.rs"

[[bin]]
name = "appctl"
path = "src/main.rs"

[features]
# GUI（wry/tao）默认**关闭**：WebView 桌面栈会拉入大量前端/系统依赖，
# 我们不让它进默认构建，避免拖慢 CI。仅当在 Windows 上显式 `--features gui`
# 时才编译 `mod gui` 的 tao 窗口 + wry WebView 骨架（见 src/gui.rs）。
# 注意：wry/tao 仅声明在 [target.'cfg(windows)'.dependencies]，
# 故 macOS 即便开了该 feature 也不会编译它们（gui 模块同时受 cfg(windows) 约束）。
gui = ["dep:tao", "dep:wry"]

[dependencies]
# 平台无关核心**零运行时依赖**：配置 / 状态机 / 菜单模型都是纯逻辑，
# 因此能在 macOS / Linux / Windows 上以同一套 #[test] 验证。

# Windows 专项依赖只在 Windows 目标参与编译。macOS / Linux 桌面构建时，
# windows-service / windows / wry / tao 都不会被拉取，平台无关核心照常 build/test。
# 客户在 Windows 机器上验证服务注册、注册表、事件日志与 GUI 的真实路径。
[target.'cfg(windows)'.dependencies]
# Windows 服务：Mullvad 维护的 windows-service，封装 SCM 注册与生命周期回调。
windows-service = "0.7"
# 系统集成：注册表（开机自启）与事件日志，按命名空间精确开 feature。
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_EventLog",
    # RegCreateKeyExW / ReportEventW 在 0.58 里带 SECURITY_ATTRIBUTES / PSID 参数，
    # 均门控于 Win32_Security；缺它则这两个符号在 Windows 目标不可用（E0432）。
    "Win32_Security",
] }
# 桌面 GUI（可选）：tao = 窗口/事件循环，wry = WebView2 渲染。
# 受 `gui` feature 与 cfg(windows) 双重约束，默认不编译。
tao = { version = "0.30", optional = true }
wry = { version = "0.45", optional = true }
