[package]
name = "v2-win-packaging"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "第 11 课：最小可交叉编译 / 可打包的 CLI（cargo-xwin 交叉编译 + cargo-wix 打 MSI）"

[dependencies]
# 平台无关依赖：CLI 解析。核心问候/版本逻辑不依赖任何平台 API，
# 因此本 crate 在 macOS 上即可全绿，也能用 cargo-xwin 干净地交叉编到 MSVC 目标。
# 系统集成（Windows 服务 / WebView2 GUI / 注册表）属于第 12 课，故此处无任何平台专项依赖。
clap.workspace = true

[[bin]]
name = "v2-greeter"
path = "src/main.rs"

# ─────────────────────────────────────────────────────────────────────────────
# cargo-wix 元数据（演示用，本课不要求真打包；客户在 Windows 上 `cargo wix` 验证）。
#
# cargo-wix 默认从 `wix/main.wxs` 读取 WiX 源文件；下列键是它识别的常用项。
# 安装：`cargo install cargo-wix`；初始化模板：`cargo wix init`；打包：`cargo wix`。
# 完整签名命令见讲义第 5 节（signtool）与 `ci/ci.yml`。
# ─────────────────────────────────────────────────────────────────────────────
[package.metadata.wix]
# 产品升级码（每个产品固定一个 GUID，跨版本保持不变才能正确"升级"而非"并存"）。
# 真实项目请用 `uuidgen` / `New-Guid` 生成并固定下来；此处仅占位示意。
# upgrade-guid = "PUT-A-FIXED-GUID-HERE"
# path-guid    = "PUT-ANOTHER-FIXED-GUID-HERE"
#
name    = "v2-greeter"            # MSI 基名 → target/wix/v2-greeter-<ver>-x86_64.msi（否则默认取 package.name）
# version = "0.1.0"               # 默认取 package.version
# 更多可配置项见 `cargo wix --help` 与 wix/main.wxs 内的注释。
